# sentinel

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  PLAN.md  README.md  SPEC.md
cmake/: arm-none-eabi.cmake
docs/: flashing.md
esp32-bridge/: CMakeLists.txt  sdkconfig.defaults
esp32-bridge/main/: CMakeLists.txt  main.c  sentinel_config.h  shared_state.c  shared_state.h
esp32-bridge/main/protocols/: sentinel_i2c.h
esp32-bridge/main/tasks/: task_bme280.c  task_gps.c  task_i2c_slave.c  task_iq_stream.c  task_mqtt.c  task_webserver.c
firmware/baseband/: CMakeLists.txt  arm-none-eabi-m0.cmake  libc_stubs.c  m0.ld  m0_startup.hpp  m0_vectors.cpp  main_m0.cpp
firmware/baseband/dsp/: adsb.cpp  adsb.hpp  fm_demod.cpp  fm_demod.hpp  rssi.cpp  rssi.hpp  scanner.cpp  scanner.hpp  spectrum.cpp  spectrum.hpp
firmware/blinky/: blinky.ld  main.c  test_startup.c  vectors.S
firmware/sentinel/: CMakeLists.txt  cxx_stubs.cpp  diskio_lpc4320.c  libc_stubs.c  main.cpp  sentinel_m4.ld  startup_m4.S
firmware/sentinel/apps/: app_adsb.cpp  app_adsb.hpp  app_capture.cpp  app_capture.hpp  app_fm.cpp  app_fm.hpp  app_home_dashboard.cpp  app_home_dashboard.hpp  app_ids.hpp  app_scanner.cpp  app_scanner.hpp  app_spectrum.cpp  app_spectrum.hpp  sentinel_app_base.cpp  sentinel_app_base.hpp
firmware/sentinel/bsp/: audio_wm8731.cpp  audio_wm8731.hpp  cpld_data_h4m.cpp  cpld_init.cpp  cpld_init.hpp  lcd_ili9341.cpp  lcd_ili9341.hpp  portapack_pins.hpp
firmware/sentinel/drivers/: i2c_esp32.cpp  i2c_esp32.hpp
firmware/sentinel/event_bus/: event_bus.cpp  event_bus.hpp  event_types.hpp
firmware/sentinel/freertos/: FreeRTOSConfig.h  sentinel_runtime.cpp
firmware/sentinel/hal/: clocks.cpp  clocks.hpp  gpio.cpp  gpio.hpp  i2c.cpp  i2c.hpp  lpc4320_regs.hpp  sgpio.cpp  sgpio.hpp  ssp.cpp  ssp.hpp  uart.cpp  uart.hpp
firmware/sentinel/radio/: cpld.cpp  cpld.hpp  cpld_xsvf.S  max2837.cpp  max2837.hpp  max5864.cpp  max5864.hpp  radio_ctrl.cpp  radio_ctrl.hpp  rffc5072.cpp  rffc5072.hpp  si5351.cpp  si5351.hpp
firmware/sentinel/tasks/: task_app.cpp  task_bg_scanner.cpp  task_esp32_comms.cpp  task_ids.hpp  task_knowledge_base.cpp  task_logger.cpp  task_orchestrator.cpp  task_radio_manager.cpp
firmware/sentinel/ui/: canvas.cpp  canvas.hpp  color.hpp  font.cpp  font.hpp  widgets.cpp  widgets.hpp
firmware/shared/ipc/: ipc_protocol.hpp
firmware/tools/: lpc_checksum.py
sdcard/SENTINEL/config/: device.json  mqtt_topics.json  scan_config.json
